Some small changes

--- a/text/mgr-thesis.tex
+++ b/text/mgr-thesis.tex
@@ -81,7 +81,13 @@ Haskell, type system, type extension
 
 \chapter{Type system}
 
-(Part of introduction?)\dots
+% XXX: Move this to introduction?
+Talking about extensions of type system requires understanding what type system is.
+In this work we will under term type system understand \cite{pierce:2002:types, barendregt:1992:lambdaProc} \dots
+
+\begin{itemize}
+	\item
+\end{itemize}
 
 \section{Haskell type system}
 
@@ -413,7 +419,8 @@ Count x `plus'` Count y = Count (x + y)
 
 I came to conclusion that violet cows are present mainly in ads.
 
-\bibliographystyle{apalike}
+%\bibliographystyle{apalike}
+\bibliographystyle{plain}
 \bibliography{bibliography}
 
 \end{document}
