--- a/text/mgr-thesis.tex
+++ b/text/mgr-thesis.tex
@@ -83,10 +83,14 @@ Haskell, type system, type extension
 
 % XXX: Move this to introduction?
 Talking about extensions of type system requires understanding what type system is.
-In this work we will under term type system understand \cite{pierce:2002:types, barendregt:1992:lambdaProc} \dots
+In this work we will under term type system understand (similarly as
+\cite{pierce:2002:types, barendregt:1992:lambdaProc}) formal system provided that
 
 \begin{itemize}
-	\item
+	\item Safety
+	\item Optimization
+	\item Documentation
+	\item Abstraction
 \end{itemize}
 
 \section{Haskell type system}
