--- a/text/mgr-thesis.tex
+++ b/text/mgr-thesis.tex
@@ -10,6 +10,7 @@
 \usepackage[T1]{fontenc}
 \usepackage[plainpages=false,pdfpagelabels,unicode]{hyperref}
 \usepackage[all]{hypcap}
+\usepackage{caption}
 
 \usepackage{lmodern}
 \usepackage{amsmath,amsthm,amsfonts}
@@ -99,7 +100,11 @@ In this work we will understand type system (similarly as
 		eliminating many erroneous possibilities.
 \end{description}
 
-Static typing, Strong typing, \dots
+These qualities are typically achieved by meta system, typically
+enriching syntax of a language and set of rules that restrict how can
+simpler programs combined into more complex ones.
+Check for these rules is done statically (at compile time).
+%Static typing, Strong typing, \dots
 
 \section{Haskell type system}
 
@@ -126,12 +131,11 @@ True :: Bool
 
 Type Constructors
 \begin{code}
-[1,2,3]         :: [Integer]
-(True, 'a')     :: (Bool,Char)
-Just [((),"a")] :: Maybe [((),String)]
-isAlpha         :: Char -> Bool
+[1, 2, 3]        :: [Integer]
+(True, 'a')      :: (Bool, Char)
+Just [((), "a")] :: Maybe [((), String)]
+isAlpha          :: Char -> Bool
 \end{code}
-
 
 Polymorphic types
 \begin{code}
@@ -139,58 +143,84 @@ id    :: a -> a
 const :: a -> b -> a
 \end{code}
 
-Parametric overloading
+What do these types mean? Type of identity function tells us, that
+it can take as argument value of any type and it returns value of the
+same type. Well, not exactly any type. We are interested in inhabited
+types only. But we know category that consists only of these types~--
+kind \(\kindStar\). Let us write that in explicit way.
+
+%\begin{example}~
+\begin{align*}
+\texttt{id} & :: \forall a \in {\kindStar} \, . \, a \to a \\
+\texttt{const} & :: \forall a \in {\kindStar} \, . \, \forall b \in {\kindStar} \, . \, a \to b \to a \\
+\end{align*}
+% \[ \texttt{id} :: \forall a \in {\kindStar} \, . \, a \to a \]
+% \[ \texttt{const} :: \forall a \in {\kindStar} \, . \, \forall b \in {\kindStar} \, . \, a \to b \to a \]
+%\end{example}
+
+Somewhere between concrete and polymorphic lies values with polymorphic overloading.
 \begin{code}
 1    :: Num a => a
 elem :: Eq a => a -> [a] -> Bool
 sum  :: Num a => [a] -> a
 \end{code}
+What does this types mean? There clearly is some sort of quantification, but not over all
+possible \(\kindStar\) types. Those classes are therefore somehow subkinds of \(\kindStar\).
+Again, let us make this notion more explicit.
 
-Standard Prelude \(\kindStar\) classes and how they are structured is
+%\begin{example}~
+\begin{align*}
+\texttt{1} & :: \forall a \in \texttt {Num} \, . \, a \\
+\texttt{elem} & :: \forall a \in \texttt{Eq} \, . \, a \to [a] \to \texttt{Bool} \\
+\texttt{sum} & :: \forall a \in \texttt{Num} \, . \, [a] \to a \\
+% \[ \texttt{1} :: \forall a \in \texttt {Num} \, . \, a \]
+% \[ \texttt{elem} :: \forall a \in \texttt{Eq} \, . \, a \to [a] \to \texttt{Bool} \]
+% \[ \texttt{sum} :: \forall a \in \texttt{Num} \, . \, [a] \to a \]
+\end{align*}
+%\end{example}
+
+And we somehow know, that \( \texttt{Eq}, \texttt{Num} \subseteq \kindStar \).
+Standard Prelude \(\kindStar\)-classes and subkind relation on them is
 captured in figure \ref{diagram:kinds_star1}.
-
 \noindent
 \begin{figure}
 	\centering
 	\scalebox{0.9}{ \input{diagram/gen/kinds_star1} }
+	\caption[Explicit ``star'' Prelude classes]{Explicit \(\kindStar\) Prelude classes}
 	\label{diagram:kinds_star1}
-	%\caption{Explicit \(\kindStar\) Prelude classes}
-	\caption{Explicit ``star'' Prelude classes}
 \end{figure}
+One might have doubts about including \(\emptyset\) (with evident semantics) into diagram.
+But the notion is natural (class with no instances) and it will become useful in a moment.
+
+There are not uncommon cases where there are more than one ``restriction'' on type variable.
+Consider following example.
+% \begin{example}~
+\begin{code}
+ex :: (C1 a, C2 a) => a
+\end{code}
+What is meaning of this type? Clearly, \( a \in \texttt{C1} \) and \( a \in \texttt{C2} \) must hold.
+Giving familiar notion to this phenomenon we will write following.
+\[ \texttt{ex} :: \forall \, a \in \texttt{C1} \cap \texttt{C2} \, . \, a \]
+Fragment of emerging structure including standard Prelude classes \texttt{Eq}, \texttt{Ord}, \texttt{Show}, and \texttt{Read}
+can be found in figure \ref{diagram:kinds_star2}.
+
+% \end{example}
 
 \noindent
 \begin{figure}
 	\centering
 	\scalebox{1.0}{ \input{diagram/gen/kinds_star2} }
+	\caption[Alternative view for some ``star'' classes]{Alternative view for some \(\kindStar\) classes}
 	\label{diagram:kinds_star2}
-	%\caption{{Alternative view for some \(\kindStar\) classes}}
-	\caption{Alternative view for some ``star'' classes}
 \end{figure}
 
 \noindent
 \begin{figure}
 	\centering
 	\scalebox{1.0}{ \input{diagram/gen/kinds_star_star} }
+	\caption[Some ``emptyset to star'' classes]{Some of \(\emptyset \to \kindStar\) classes}
 	\label{diagram:kinds_star_star}
-	\caption{Some ``emptyset to star'' classes}
 \end{figure}
-
-\begin{example}~
-\[ \texttt{id} :: \forall a \in {\kindStar} \, . \, a \to a \]
-\[ \texttt{const} :: \forall a \in {\kindStar} \, . \, \forall b \in {\kindStar} \, . \, a \to b \to a \]
-\end{example}
-
-\begin{example}~
-\[ \texttt{1} :: \forall a \in \texttt {Num} \, . \, a \]
-\[ \texttt{elem} :: \forall a \in \texttt{Eq} \, . \, a \to [a] \to \texttt{Bool} \]
-\end{example}
-
-\begin{example}~
-\begin{code}
-ex :: (C1 a,C2 a) => a
-\end{code}
-\[ \texttt{ex} :: \forall \, a \in \texttt{C1} \cap \texttt{C2} \, . \, a \]
-\end{example}
 
 \begin{example}
 This one is ugly and points out some problems.
@@ -273,7 +303,7 @@ f = any . elem
 \end{code}
 This can be expressed in following way:
 \begin{code}
-type Eq a = (a -> a -> Bool,a -> a -> Bool)
+type Eq a = (a -> a -> Bool, a -> a -> Bool)
 \end{code}
 with definitions
 \begin{code}
@@ -281,7 +311,7 @@ with definitions
 (==) = fst
 
 elem :: Eq a -> a -> [a] -> Bool
--- elem ((==),(/=)) = any . (==)
+-- elem ((==), (/=)) = any . (==)
 -- or
 elem i = any . (==) i
 
@@ -300,13 +330,13 @@ class Monad m where
 no problem.)
 Most straightforward way how to express it would be
 \begin{code}
-type Monad m a b = (a -> m a,m a -> (a -> m b) -> m b)
+type Monad m a b = (a -> m a, m a -> (a -> m b) -> m b)
 \end{code}
 But what have we done? This is not traditional \texttt{Monad} but
 multi-parameter. This is another example for multi-parameter type classes
 being natural. But how to do it intended way?
 \begin{code}
-type Monad m = forall a b . (a -> m a,m a -> (a -> m b) -> m b)
+type Monad m = forall a b . (a -> m a, m a -> (a -> m b) -> m b)
 \end{code}
 
 
@@ -518,6 +548,11 @@ Count x `plus` Count y = Count (x + y)
 \chapter{Conclusion}
 
 I came to conclusion that violet cows are present mainly in ads.
+
+Oh, and of course:
+Someone might think that this work leads to conclusion that Haskell is somehow not good.
+That is not true. Big picture. Only good language pushes one to extend it... using features
+to its limits, to see what can be done, stimulates thinking about things.
 
 %\bibliographystyle{apalike}
 \bibliographystyle{plain}
