Small fix + bit of new text.

--- a/text/mgr-thesis.tex
+++ b/text/mgr-thesis.tex
@@ -220,6 +220,19 @@ can be found in figure~\ref{diagram:kinds_star2}.
 	\label{diagram:kinds_star2}
 \end{figure}
 
+It is also clear, that for example class \texttt{Num} forms structure captured
+on figure \ref{diagram:num_intersection}. This way it is clear, that not
+all types with instances for \texttt{Eq} and \texttt{Show} have to have
+instance for \texttt{Num}.
+
+\noindent
+\begin{figure}
+	\centering
+	\scalebox{1.0}{\input{diagram/gen/num_intersection}}
+	\caption[Formation of Num class]{Formation of \texttt{Num} class}
+	\label{diagram:num_intersection}
+\end{figure}
+
 \noindent
 \begin{figure}
 	\centering
